Stop justifying text
Text justification was making it hard to read the partners page on
mobile due to inline images

--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,6 @@ nav li a::after {
     transition: transform 0.2s ease-in-out;
 } */
 p {
-    text-align: justify;
     padding: 6px 0;
 }
 .motive {
